qlsettings.h

extern "C"
{
    const char *qlVersion();
    int qlSettingsEvaluationDate();
    void qlSettingsSetEvaluationDate(int x);

    int qlMinDate();
    int qlMinYear();
    int qlMinMonth();
    int qlMinDay();
}